Moved driver start and stop to it's own routines.

--- a/src/vscp/samples/node_js/node-red-node-vscp-events/node_events.html
+++ b/src/vscp/samples/node_js/node-red-node-vscp-events/node_events.html
@@ -75,5 +75,9 @@
         oneditprepare: function() {
             ;
         }
+        credentials: {
+            username: {type:"text"},
+            password: {type:"password"}
+        },
     });
 </script>
