Upfated the web sample pages to the latest greatest

--- a/config_examples/web/testws/index.html
+++ b/config_examples/web/testws/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 <title>VSCP Websocket widgets</title>
+<!-- Don't cache the page -->
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<META HTTP-EQUIV="Expires" CONTENT="-1">
 <script type="text/javascript" src="../lib/vscpwslib.js"></script>
 </head>
 
@@ -11,27 +14,69 @@
 <h1>VSCP HTML5 websocket widget samples</h1>
 
 For help on how to use the samples check the <a href="http://www.vscp.org/wiki">wiki</a> 
-and the <a href="https://sourceforge.net/projects/m2m/files/VSCP%20Specification/"> specification document</a> at section 14.9
+and the <a href="http://www.vscp.org/docs/vscpspec/doku.php?id=start"> specification document</a> and
+the <a href="http://www.vscp.org/docs/vscpd/doku.php">VSCP daemon documentation</a>.
 <br><br>
 
 Test of the authentication sequence - <a href="testauth.html">testauth.html</a> <br/>
 Test event control <a href="event.html">event.html</a> <br/>
-Test StateButton <a href="Statebutton.html">Statebutton.html</a> <br/>
+Test StateButton <a href="statebutton.html">statebutton.html</a> <br/>
 Test SimpleText <a href="simpletext.html">simpletext.html</a><br/>
+Test Variables <a href="variable.html">variable.html</a><br/>
 Test ThermometerCelsius <a href="thermometercelsius.html">thermometercelsius.html</a><br/>
 Test Speedometer <a href="speedometer.html">speedometer.html</a><br/>
 Slider <a href="slider.html">slider.html</a><br/>
 Progress <a href="progress.html">progress.html</a><br/>
+VSCP Tables <a href="table_dynamic.html">table_dynamic.html</a><br/>
 Test Node Discovery <a href="node_discovery.html">node_discovery.html</a><br/>
-<br><br>
+<br>
 <h2>Google Charts Demos</h2>
 Google Charts Gauge <a href="google_gauge.html">gogle_gauge.html</a><br/>
 Google Charts Table <a href="google_table.html">google_table.html</a><br/>
 Google Charts Line Simple <a href="google_line_simple.html">google_line_simple.html</a><br/>
 <p>
-More info about Google Charts is <a href="https://developers.google.com/chart/">here</a>.
+More info about the Google charts library is <a href="https://developers.google.com/chart/">here</a>.
 </p>
+
+<h2>Epoch Charts Demos</h2>
+Simple <a href="epoch_simple.html">epoch_simple.html</a><br/>
+<p>
+More info about the Epoch charting library is <a href="http://fastly.github.io/epoch/">here</a>.
+</p>
+
+<h2>Datatables Demos</h2>
+<p>
+More info about the Datatables library is <a href="http://datatables.net/">here</a>.
+</p>
+
+<hr>
+
+<h2>If you want to learn more or need help</h2>
+
+You find links to the different parts of the documentation for the VSCP & Friends project 
+<a href="http://www.vscp.org/docs.php">here</a>. It's a lot of words because it's a big and advanced system with
+many features. You may also find our <a href="http://www.vscp.org/wiki/doku.php">wiki</a> to be a valuable resource. 
+If you have questions or need pointers on where to start subscribe to our 
+ <a href="https://groups.google.com/forum/#!forum/vscp">mailinglist</a>. You will find that we have a very nice 
+ discussion climate and any question is taken care of.
+
+<hr> 
+ 
+<h2>Need VSCP hardware.</h2>
+
+<a href="http://www.frogshop.se">
+<img src="../images/frogshop-logo.png" > 
+</a>
 <br>
+If you ned hardware you can build things yourself. The <a href="http://www.vscp.org/wiki/doku.php">wiki</a> contains many examples. 
+You can also use any hardware you have have by building a simple driver for it. Check the documentation on how
+to do it or use any of the available drivers as a starting point.
+
+<a href="http://www.grodansparadis.com">Grodans Paradis AB/Paradise of the Frog</a> is the company behind VSCP & Friends 
+and we sell some VSCP plug and play hardware. Visit our <a href="http://www.grodansparadis.com">site</a> and 
+<a href="http://www.frogshop.se">store</a> to get info about the latest greatest. Actually, the best way to support this project
+is to buy products from our <a href="http://www.frogshop.se">store</a>.
+ 
 </div>
 
 <div>
