--- a/config_examples/web/testws/statebutton.html
+++ b/config_examples/web/testws/statebutton.html
@@ -3,6 +3,9 @@
 <head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 <title>VSCP vscpws_stateButton demo</title>
+<!-- Don't cache the page -->
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<META HTTP-EQUIV="Expires" CONTENT="-1">
 <!--
 <link rel="stylesheet" type="text/css" href="../css/vscpdemo.css" />
 -->
@@ -29,7 +32,8 @@ the TurnOff events to change there state. If the reply is not received the butto
 state.
 </p>
 <p>
-You can use the <a href="event.html" target="new">event.html</a> demo to send the expected replies.
+You can use the <a href="event.html" target="new">event.html</a> demo to send the expected replies and also 
+see the events sent.
 </p>
 
 <div id="canvasesdiv" style="position:relative; width:800px; height:670px">
