Duktape added and updated web thingis

--- a/config_examples/web/index.html
+++ b/config_examples/web/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h1>It works!</h1>
+<br><br>
 <img src="images/logo/vscp_new.png" width="400">
 <br><br>
 <p>This is the default web page for the VSCP daemon. This is a fully working 
@@ -12,7 +13,10 @@ web server so you can add to HTML files to the folder you have setup using
 any other webserver. <b>/vscp</b> is a reserved path and you should not us it in your
 own folder structure as it will take you to <a href="/vscp">this reserved page.</a></p>
 
-<p>To test the websocket interface of the VSCP daemon you first edit the <b>setup.js</b>
+<hr>
+<h3>To test things</h3>
+
+<p>To test the websocket interface of the VSCP daemon you first edit the <b>settings.js</b>
 file which after installation is located in the testws subfolder of the web root filesystem. </p>
 <p>The default content in this file is:</p>
 <p><b>
@@ -25,11 +29,13 @@ which is the default admin credentials for<br>
 <br>
 <b>Username: <i>admin</i></b><br>
 <b>Password: <i>secret</i></b><br>
+<b>Domain:   <i>mydomain.com</i></b><br>
 <br>
 needless to say you should change this as soon as you use your system more seriously.<br><br>
 
-The other part in the <b>setup.js</b> file to change is the url for your server. When you have edited and saved this information you 
-can test the <a href="testws/testauth.html">websocket login test script</a>. If you see something like
+The other part in the <b>settings.js</b> file to change is the url for your server. When you have edited 
+and saved this information you can test the <a href="testws/testauth.html">websocket login test 
+script</a>. If you see something like
 <br><br> 
 <span style="color: red;"><b>Authentication 1 - Logged in</b></span>
 <br><br>
@@ -39,6 +45,7 @@ The default for the websocket samples is non-ssl. If you want to use ssl (with t
 of the VSCP daemon) you should use 
 <b>"wss://"</b> as prefix instead of <b>"ws://"</b>
 </p>
+<hr>
 <h3>Demos</h3>
 <p>
 When the login works you can <b>test the websocket interface</b> of the VSCP daemon by
