--- a/config_examples/web/testws/node_discovery.html
+++ b/config_examples/web/testws/node_discovery.html
@@ -17,6 +17,8 @@
 
 <body>
 <h1>VSCP Node discovery demo</h1>
+<a href="index.html">Go back to main page</a>
+<br>
 This demo waits for <strong>CLASS1.INFORMATION, Type=9/Heartbeats</strong> and if the heartbeat has not been seen yet it is 
 added to the list. You can send one from the tcp/ip interface with <br> <strong>send 0,20,9,0,0,"-",0,0,0</strong><br> or you can use 
 the event send list in the <a href="event.html" target="new" >event.html</a> demo.
@@ -75,5 +77,10 @@ the event send list in the <a href="event.html" target="new" >event.html</a> dem
                                     newnode );
 </script>
 
+    <br><br>
+    <hr>
+    Copyright &copy; 2000-2015 <a href="mailto:info@grodansparadis.com">email</a>,
+    <a href="http://www.grodansparadis.com">Paradise of the Frog / Grodans Paradis AB</a>
+    </div>
 </body>
 </html>
