--- a/src/vscp/samples/rest/web/index.html
+++ b/src/vscp/samples/rest/web/index.html
@@ -1,4 +1,40 @@
 <!DOCTYPE html>
+<!--
+	//
+	// VSCP javascript websocket library
+	// Copyright (C) 2012-2015 Ake Hedman, Grodans Paradis AB
+	// <akhe@grodansparadis.com>
+	//
+	// Licence:
+	// The MIT License (MIT)
+	// [OSI Approved License]
+	//
+	// The MIT License (MIT)
+	//
+	// Copyright (c) 2012-2015 Paradise of the Frog/Grodans Paradis AB
+	//
+	// Permission is hereby granted, free of charge, to any person obtaining a copy
+	// of this software and associated documentation files (the "Software"), to deal
+	// in the Software without restriction, including without limitation the rights
+	// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+	// copies of the Software, and to permit persons to whom the Software is
+	// furnished to do so, subject to the following conditions:
+	//
+	// The above copyright notice and this permission notice shall be included in
+	// all copies or substantial portions of the Software.
+	//
+	// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+	// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+	// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+	// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+	// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+	// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+	// THE SOFTWARE.
+	//
+	// Alternative licenses for VSCP & Friends may be arranged by contacting
+	// Grodans Paradis AB at info@grodansparadis.com, http://www.grodansparadis.com
+	//
+-->
 <html>
 <head>
     <meta charset="UTF-8">
@@ -326,8 +362,8 @@
 
 		var query = getQueryParams( document.location.search );
 
-		if ( query.cmd == "open" ) {
-		
+		if ( query.host.length > 0 ) {
+			VscpServer = query.host;
 		}
 
 		
