REST measurement in place.

--- a/src/vscp/samples/rest/web/index.html
+++ b/src/vscp/samples/rest/web/index.html
@@ -495,7 +495,7 @@
 						// response will be a javascript
 						// array of objects
 						console.log("-----------------------------------------------------------");
-						console.log("                         do_clrQueue");
+						console.log("                     do_readVariable");
 						console.log("-----------------------------------------------------------");
 						console.log("Success = " + response.success );
 						console.log("Code = " + response.code );
