--- a/src/vscp/samples/rest/web/index.html
+++ b/src/vscp/samples/rest/web/index.html
@@ -660,7 +660,7 @@
 						// response will be a javascript
 						// array of objects
 						console.log("-----------------------------------------------------------");
-						console.log("                     do_createVariable");
+						console.log("                     do_sendMeasurement");
 						console.log("-----------------------------------------------------------");
 						console.log("Success = " + response.success );
 						console.log("Code = " + response.code );
