Removed unused mqtt and coap code

--- a/src/vscp/samples/rest/web/index.html
+++ b/src/vscp/samples/rest/web/index.html
@@ -11,7 +11,7 @@
 	//
 	// The MIT License (MIT)
 	//
-	// Copyright (c) 2012-2015 Paradise of the Frog/Grodans Paradis AB
+	// Copyright (c) 2012-2018 Grodans Paradis AB
 	//
 	// Permission is hereby granted, free of charge, to any person obtaining a copy
 	// of this software and associated documentation files (the "Software"), to deal
@@ -740,7 +740,7 @@
 		<p id="nevents"> </p>
 		<p id="events"> </p>
 		<hr>
-        <a href="http://www.paradiseofthefrog.com">Paradise of the Frog AB</a>
+        <a href="http://www.grodansparadis.com">Grodans Paradis AB</a>
     </div>
 	
 </body>
