Updated debian install

--- a/contrib/samples/rest/web/index.html
+++ b/contrib/samples/rest/web/index.html
@@ -3,7 +3,7 @@
 	//
 	// VSCP javascript websocket library
 	// Copyright (C) 2012-2015 Ake Hedman, Grodans Paradis AB
-	// <akhe@grodansparadis.com>
+	// <akhe@vscp.org>
 	//
 	// Licence:
 	// The MIT License (MIT)
