--- a/tests/websockets/ws2.html
+++ b/tests/websockets/ws2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html><head>
-<meta charset=\"UTF-8\">
-<title>Embedded websocket example</title>
+<meta charset="UTF-8">
+<title>Embedded VSCP ws1 interface websocket example</title>
 
 <script type="text/javascript">
     function load() {
         var wsproto = (location.protocol === 'https:') ? 'wss:' : 'ws:';
-        connection = new WebSocket( wsproto + '//' + window.location.host + '/' );
+        connection = new WebSocket( wsproto + '//localhost:8884/ws2' );
         websock_text_field = 
           document.getElementById('websock_text_field');
         connection.onmessage = function( e ) {
