--- a/contrib/samples/rest/web/index.html
+++ b/contrib/samples/rest/web/index.html
@@ -32,7 +32,7 @@
 	// THE SOFTWARE.
 	//
 	// Alternative licenses for VSCP & Friends may be arranged by contacting
-	// the VSCP project at info@grodansparadis.com, http://www.grodansparadis.com
+	// the VSCP project at akhe@vscp.org, http://www.grodansparadis.com
 	//
 -->
 <html>
